# FIRE-Challenge

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  database.py  main.py
app/api/: dashboard.py  helpers.py  managers.py  processing.py  tickets.py  upload.py
app/models/: __init__.py  business_unit.py  manager.py  ticket.py
app/schemas/: business_unit.py  manager.py  ticket.py
app/services/: assignment.py  chart_aggregation.py  chart_intent.py  csv_loader.py  geocoding.py  minio_client.py  nlp.py
app/static/: index.html
docs/: SYSTEM_OVERVIEW_FOR_DIAGRAM.md
result/: result-assignments.csv
